# basic_cpp

./: .gitignore
classes/calc_two_nums/: CMakeLists.txt  main.cpp
classes/counter/: CMakeLists.txt  main.cpp
exceptions_err/excepts_construct/: CMakeLists.txt  equilateral_tri.cpp  equilateral_tri.h  isosceles_tri.cpp  isosceles_tri.h  main.cpp  my_except.cpp  my_except.h  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  right_angled_tri.cpp  right_angled_tri.h  shape.cpp  shape.h  square.cpp  square.h  triangle.cpp  triangle.h
exceptions_err/simple_exception/: CMakeLists.txt  main.cpp
multf_projects/class_counter/: CMakeLists.txt  class_counter.cpp  class_counter.h  main.cpp
multf_projects/class_hierarchy/: CMakeLists.txt  equilateral_tri.cpp  equilateral_tri.h  isosceles_tri.cpp  isosceles_tri.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  right_angled_tri.cpp  right_angled_tri.h  shape.cpp  shape.h  square.cpp  square.h  triangle.cpp  triangle.h
multf_projects/mathc_func/: CMakeLists.txt  main.cpp  mathc_func.cpp  mathc_func.h
oop_abstract_encapsul/addresses/: CMakeLists.txt  main.cpp
oop_abstract_encapsul/sorting_address/: CMakeLists.txt  main.cpp
oop_inheritance_polymorphism/shapes_and_sides/: CMakeLists.txt  main.cpp
oop_inheritance_polymorphism/shapes_methods/: CMakeLists.txt  main.cpp
oop_inheritance_polymorphism/shapes_sides_corners/: CMakeLists.txt  main.cpp
overload/comparison_fract/: CMakeLists.txt  main.cpp
overload/other_operations/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
preprocessor/macro_sub/: CMakeLists.txt  main.cpp
preprocessor/preproc_directiv/: CMakeLists.txt  main.cpp
struct_and_enum/task1_months/: task1_months.cpp
struct_and_enum/task2_accounts/: README.md  Task2_Accounts.cpp
struct_and_enum/task3_structure_output/: Task3_Structure_output.cpp
